--- a/_posts/2017-05-25-获取上传图片详情.md
+++ b/_posts/2017-05-25-获取上传图片详情.md
@@ -2,8 +2,8 @@
 layout: post
 title: 获取上传图片的宽高大小
 date:   2017-05-25 14:08:35 +0800
-category: html5
-tags: [html]
+category: dmeo
+tags: [demo]
 ---
 ### 获取上传图片的宽高，大小
 
